# ilc-scraper

./: .gitignore  CONTRIBUTING.md  README.md  build.spec  downloader.py  ilc_scrape.py  pyproject.toml  sample_config.json  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
