[tool.poetry]
name = "ilc-scraper"
version = "0.2.0"
description = "A scraper for Impartus Lecture Capture videos for BITS Hyderabad"
authors = ["iamkroot <kroot.patel@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iamkroot/ilc-scraper"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
gooey = { version = "^1.0", optional = true }

[tool.poetry.extras]
gui = ["gooey"]

[tool.poetry.dev-dependencies]
pyinstaller = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
